--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -88,7 +88,7 @@ section#background-metromap {
 
   .modalDialog {
   	position: fixed;
-  	font-family: Arial, Helvetica, sans-serif;
+  	font-family: 'Didact Gothic', sans-serif;
   	top: 0;
   	right: 0;
   	bottom: 0;
@@ -110,8 +110,8 @@ section#background-metromap {
   .modalDialog > div {
   	width: 600px;
   	position: relative;
-  	margin: 10% auto;
-  	padding: 5px 20px 13px 20px;
+  	margin: 8% auto;
+  	padding: 13px 20px 13px 20px;
   	border-radius: 10px;
   	background: #fff;
   }
@@ -120,12 +120,27 @@ section#background-metromap {
   	background: -webkit-linear-gradient(#fff, #999);
   	background: -o-linear-gradient(#fff, #999); */
 
-  .modalDialog img,
   .modalDialog h2,
   .modalDialog h4 {
-    width: 100%;
     text-align: center;
   }
+
+  .modalDialog img {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    margin: auto;
+  }
+
+    img.large-medium {
+      height: 75%;
+      width: 75%;
+    }
+
+    img.medium-large {
+      height: 65%;
+      width: 65%;
+    }
 
   .close {
   	background: #606061;
@@ -148,16 +163,4 @@ section#background-metromap {
 
   .close:hover {
     background: #d61f26;
-  }
-
-  .diploma {
-    height: 100%;
-    width: 100%;
-  }
-
-  #bjp-logo {
-    height: 75%;
-    width: 75%;
-    display: flex;
-    margin: auto;
   }
