--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -52,7 +52,7 @@ section#background-metromap {
 
 /* Tooltips */
   .tooltip {
-      cursor: pointer;
+      cursor: help;
   }
 
   .tooltip .tooltiptext {
@@ -96,9 +96,9 @@ section#background-metromap {
   	background: rgba(0,0,0,0.8);
   	z-index: 99999;
   	opacity:0;
-  	-webkit-transition: opacity 400ms ease-in;
-  	-moz-transition: opacity 400ms ease-in;
-  	transition: opacity 400ms ease-in;
+  	-webkit-transition: opacity 200ms ease-in;
+  	-moz-transition: opacity 200ms ease-in;
+  	transition: opacity 200ms ease-in;
   	pointer-events: none;
   }
 
@@ -107,10 +107,11 @@ section#background-metromap {
   	pointer-events: auto;
   }
 
-  .modalDialog > div {
-  	width: 600px;
+  .modalDialog div {
+  	max-width: 600px;
+    max-height: 600px;
   	position: relative;
-  	margin: 8% auto;
+  	margin: 10% auto;
   	padding: 13px 20px 13px 20px;
   	border-radius: 10px;
   	background: #fff;
@@ -126,21 +127,11 @@ section#background-metromap {
   }
 
   .modalDialog img {
-    width: 100%;
-    height: 100%;
-    display: flex;
+    max-width: 600px;
+    max-height: 500px;
+    display: block;
     margin: auto;
   }
-
-    img.large-medium {
-      height: 75%;
-      width: 75%;
-    }
-
-    img.medium-large {
-      height: 65%;
-      width: 65%;
-    }
 
   .close {
   	background: #606061;
@@ -163,4 +154,8 @@ section#background-metromap {
 
   .close:hover {
     background: #d61f26;
+  }
+
+  #tooltipmodal {
+    cursor: pointer;
   }
