--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,7 +9,7 @@ div {
 /* heather */
 
 header {
-  width: 1024px;
+  max-width: 4000px;
   position: fixed;
   top: 0;
   left: 0;
@@ -19,27 +19,40 @@ div.flex-header {
   display: inline-flex;
 }
 
+#JE-logo {
+  width: 15%;
+  margin: 1rem 0 1rem 1rem;
+}
+
 #JE-logo img {
-  height: 60px;
-  width: 170px;
-  margin: 12px 0 12px 12px;
+  width: 100%;
+
+}
+
+#JE-title {
+  width: 60%;
+  margin: .5rem 0 1rem 1.5rem;
+  display: flex;
+  align-items: center;
 }
 
 #JE-title h1 {
   font-family: 'Didact Gothic', sans-serif;
-  font-size: 5rem;
-  width: 100%;
-  height: 100%;
-  margin-left: 1rem;
+  font-size: 3rem;
+
+
 }
 
 #JE-favs {
-  margin-left: auto;
+  width: 25%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1rem 1rem 1rem 0;
 }
 
 #JE-favs i {
   font-size: 2rem;
-
 }
 
 section.conteiner {
